Appletから普通のAWTアプリに移行